2009-06-12 13:43 +0200  Rocco Rutte  <pdmef@gmx.net>  (ed206ad41108)

	* ChangeLog, commands.c, recvcmd.c: Warn before bouncing messages
	without From: header. Closes #3180.

2009-06-12 15:21 +0200  Rocco Rutte  <pdmef@gmx.net>  (1673273a2e18)

	* ChangeLog, smtp.c: SMTP: don't block but print CRLF for last line if
	it's not terminated

2009-06-11 18:34 +0200  Rocco Rutte  <pdmef@gmx.net>  (f60eb41ef63c)

	* UPDATING: Mention maildir mtime use in browser

2009-06-11 18:31 +0200  Rocco Rutte  <pdmef@gmx.net>  (fc60d44a5b22)

	* ChangeLog, send.c: Don't allow setting Return-Path: header via
	my_hdr

	Mutt has use_envelope_from/envelope_from_address for that purpose.
	Closes #1840.

2009-06-11 18:17 +0200  Rocco Rutte  <pdmef@gmx.net>  (8efc1cd0b8c0)

	* browser.c: Use only latest mtime of new/cur for browser, not whole
	stat() info

2009-06-11 18:14 +0200  Rocco Rutte  <pdmef@gmx.net>  (05f8c53b57a1)

	* ChangeLog, copy.c: Don't reformat Return-Path (angle brackets are
	not optional). Closes #1702.

2009-06-10 17:44 +0200  Rocco Rutte  <pdmef@gmx.net>  (0721c3f6320d)

	* mbox.c, mx.c: Only print messages about CONTEXT when quiet flag not
	set

2009-06-09 22:09 -0700  Brendan Cully  <brendan@kublai.com>  (dc9ec900c657)

	* ChangeLog, mutt_ssl.c: Improve host checking for SSL with
	intermediate certificates.

2009-06-09 22:03 -0700  Brendan Cully  <brendan@kublai.com>  (9dcb7288039d)

	* mutt_ssl.c: Whitespace.

	* imap/imap.c: Skip comparison against current mailbox for idle
	connections. Closes #3216.

	* imap/util.c: Revert accidental change

	* imap/util.c: Remove trailing whitespace.

2009-06-08 23:55 -0700  Brendan Cully  <brendan@kublai.com>  (15c662a95b91)

	* configure.ac, m4/libgnutls.m4: Test for libgnutls by hand rather
	than relying on deprecated libgnutls-config script. Closes #3239.

2009-06-07 10:55 -0700  Brendan Cully  <brendan@kublai.com>  (9831d4c2c3f9)

	* imap/message.c: Do not display error message when user declines
	to create target mailbox.
